--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,18 +12,26 @@ import { filterPublishedPosts, sortPostsByDate } from "@utils/posts";
 
 const skills = [
   { name: "ethical-hacking", icon: "mdi:shield-check" },
-  { name: "secure-code-reviewer", icon: "mdi:code-braces" },
   { name: "triage", icon: "mdi:bug" },
-  { name: "web-security", icon: "mdi:shield-check" },
+  { name: "web-security", icon: "mdi:web" },
   { name: "automation", icon: "mdi:robot" },
+  { name: "secure-code-review", icon: "mdi:code-braces" },
+  { name: "hackerone", icon: "simple-icons:hackerone" },
   { name: "dev-sec-ops", icon: "mdi:shield-check" },
-  { name: "ci-cd", icon: "mdi:robot" },
-  { name: "devops", icon: "mdi:robot" },
   { name: "burp-suite", icon: "simple-icons:burpsuite" },
+  { name: "active-directory", icon: "mdi:microsoft-windows" },
   { name: "python", icon: "simple-icons:python" },
   { name: "java", icon: "mdi:language-java" },
   { name: "c++", icon: "simple-icons:cplusplus" },
   { name: "typescript", icon: "simple-icons:typescript" },
+  { name: "algorithms", icon: "mdi:math-integral" },
+  { name: "networking", icon: "mdi:network" },
+  { name: "sql", icon: "mdi:database" },
+  { name: "bash", icon: "mdi:terminal" },
+  { name: "pentesting", icon: "mdi:report-donut" },
+  { name: "ffuf", icon: "mdi:list-box-outline" },
+  { name: "gobuster", icon: "mdi:list-status" },
+  { name: "astrojs", icon: "simple-icons:astro" },
 ];
 
 // Get all posts and process them
@@ -84,16 +92,16 @@ try {
 
 <Layout>
   <div
-    class="mx-auto flex w-fit justify-between lg:mt-18 lg:ml-7 xl:ml-12 2xl:ml-16 3xl:mx-auto 2xl:gap-6 3xl:gap-12"
+    class="mx-auto px-2 flex w-fit justify-between lg:mt-18 lg:ml-7 xl:ml-12 2xl:ml-16 3xl:mx-auto 2xl:gap-6 3xl:gap-12"
   >
     <Presentation
-      class="card-basic sticky top-25 grid h-fit w-auto max-w-110 min-w-85 place-items-center gap-5 max-lg:hidden md:mx-auto"
+      class="card-basic sticky 4xl:mr-25 top-25 grid h-fit w-auto max-w-110 min-w-85 place-items-center gap-5 max-lg:hidden md:mx-auto drop-shadow-md drop-shadow-primary/25"
     />
     <div
-      class="relative mx-auto grid h-full w-fit max-w-210 grid-cols-7 content-center gap-4 px-2 sm:mx-5"
+      class="relative mx-auto grid h-full w-fit max-w-210 grid-cols-7 content-center gap-4 px-2 sm:mx-5 lg:mt-1"
     >
       <Presentation
-        class="card-basic col-span-7 mx-auto mb-8 grid h-fit min-w-85 place-items-center gap-5 lg:hidden"
+        class="card-basic col-span-7 mx-auto mb-8 grid h-fit min-w-85 place-items-center gap-5 lg:hidden drop-shadow-md drop-shadow-primary/40"
       />
       <!-- <div -->
       <!--   class="3xl:col-span-5 col-span-7 mx-auto space-y-12 xl:col-span-4 xl:max-w-320 xl:p-0 xl:px-10" -->
@@ -102,89 +110,107 @@ try {
         <h1
           class="mb-8 text-center text-2xl font-black lg:mt-5 lg:text-3xl text-gray-50"
         >
-          Welcome Space-Dinosaur! Nice to meet you!
+          Welcome to <span
+            class="bg-clip-text text-transparent bg-gradient-to-r from-primary to-secondary"
+          >
+            SpaceDinoDive</span
+          >!
         </h1>
 
-        <p class="text-justify text-[17px] text-pretty lg:px-4 px-4">
-          My name is Alejandro. I am an Appsec Researcher and Ethical Hacker.
-          This is my personal website where I share my knowledge and
-          experiences. Here you will find my latest blog posts, my curriculum,
-          and my projects. I hope you enjoy your stay here!
+        <p class="text-justify text-[16px] text-pretty lg:px-4 px-2">
+          It's great to meet you! My name is Alejandro and I am the owner and
+          host of this amazing space-bar, a bar for Space-Dinos! You're invited
+          to come along and relax, enjoy our amazing extinction juice and have a
+          great time getting to know me better.
+          <br />
+          <br />
+          <span class="text-secondary">About me:</span> I'm a Cyber Security Analyst,
+          Ethical Hacker and I'm currently training to be an <span
+            class="text-primary font-semibold">Appsec Engineer</span
+          >! This is my personal website where you'll find all the latest posts
+          from my blog, along with my curriculum, projects and contact
+          information.
+          <br />
+          <br />
+          <span class="font-semibold text-primary text-center">
+            I hope you enjoy your stay here!
+          </span>
         </p>
 
         <h2 class="text-2xl font-bold text-center mt-8">About my career</h2>
-        <TimeLine />
-        <!-- <TimeLine2 /> -->
-      </div>
-      <div
-        class="col-span-7 mx-auto mt-4 flex w-full flex-col items-center justify-center gap-6 text-center md:px-10"
-      >
-        <h2 class="text-2xl font-bold">Skills</h2>
+        <TimeLine>
+          <!-- <TimeLine2 /> -->
+        </TimeLine>
         <div
-          class="flex max-w-300 flex-wrap justify-center gap-2 rounded-3xl px-2 lg:px-4"
+          class="col-span-7 mx-auto mt-4 flex w-full flex-col items-center justify-center gap-6 text-center md:px-10"
         >
-          {
-            skills.map((skill) => (
-              <div class="badge-soft badge p-3 text-sm badge-primary sm:text-base">
-                <Icon name={skill.icon} class="" />
-                <span class=" ">{skill.name}</span>
-              </div>
-            ))
+          <h2 class="text-2xl font-bold">Skills</h2>
+          <div
+            class="flex max-w-300 flex-wrap justify-center gap-2 rounded-3xl px-2 lg:px-4"
+          >
+            {
+              skills.map((skill) => (
+                <div class="badge-soft badge p-3 text-sm badge-primary sm:text-base">
+                  <Icon name={skill.icon} class="" />
+                  <span class=" ">{skill.name}</span>
+                </div>
+              ))
+            }
+          </div>
+        </div>
+        <div
+          class="col-span-7 mx-auto flex w-full flex-col items-center justify-center gap-2 md:gap-8 text-center"
+        >
+          <div class="divider px-10 md:px-80"></div>
+          <div
+            class="mx-auto flex items-center justify-center gap-4 text-center text-3xl font-bold mb-4"
+          >
+            Destacable Projects
+            <Icon
+              name="streamline-emojis:rocket"
+              class="max-md:hidden md:h-12 md:w-12"
+            />
+          </div>
+          <div
+            class="grid xl:grid-cols-2 *:w-auto! lg:px-6 *:col-span-1 justify-between gap-5"
+          >
+            <CardProject
+              title="Astro-AleRaptor"
+              summary="A personal website built with Astro."
+              url="https://github.com/alehdezp/astro-aleraptor"
+              descriptionList={[
+                "This website is built with Astro and TailwindCSS.",
+                "It features a blog section with a custom blog post page.",
+                "The blog posts are sorted by date and displayed in a timeline format.",
+                "The website also includes a portfolio section with a custom project page.",
+                "The projects are displayed in a grid format with a card layout.",
+              ]}
+              tags={["Astro", "TailwindCSS", "Markdown"]}
+            />
+          </div>
+          <div class="divider px-10 md:px-80"></div>
+          <div
+            class="mx-auto flex items-center justify-center gap-4 text-center text-3xl font-bold mb-4"
+          >
+            Highlighted Blog Posts
+            <Icon
+              name="streamline:curly-brackets-solid"
+              class="max-md:hidden md:h-9 md:w-9"
+            />
+          </div>
+          <div class="flex flex-wrap justify-center gap-8 lg:px-5 text-left">
+            <BlogPreview post={page.data[0]} />
+            <BlogPreview post={page.data[1]} />
+            <BlogPreview post={page.data[2]} />
+          </div>
+        </div>
+        <style>
+          main {
+            margin: auto;
+            width: 100%;
           }
-        </div>
+        </style>
       </div>
-      <div
-        class="col-span-7 mx-auto flex w-full flex-col items-center justify-center gap-2 md:gap-8 text-center"
-      >
-        <div class="divider px-10 md:px-80"></div>
-        <div
-          class="mx-auto flex items-center justify-center gap-4 text-center text-3xl font-bold mb-4"
-        >
-          Destacable Projects
-          <Icon
-            name="streamline-emojis:rocket"
-            class="max-md:hidden md:h-12 md:w-12"
-          />
-        </div>
-        <div
-          class="grid xl:grid-cols-2 *:w-auto! *:col-span-1 justify-between gap-5 px-3"
-        >
-          <CardProject
-            title="Astro-AleRaptor"
-            summary="A personal website built with Astro."
-            url="https://github.com/alehdezp/astro-aleraptor"
-            descriptionList={[
-              "This website is built with Astro and TailwindCSS.",
-              "It features a blog section with a custom blog post page.",
-              "The blog posts are sorted by date and displayed in a timeline format.",
-              "The website also includes a portfolio section with a custom project page.",
-              "The projects are displayed in a grid format with a card layout.",
-            ]}
-            tags={["Astro", "TailwindCSS", "Markdown"]}
-          />
-        </div>
-        <div class="divider px-10 md:px-80"></div>
-        <div
-          class="mx-auto flex items-center justify-center gap-4 text-center text-3xl font-bold mb-4"
-        >
-          Highlighted Blog Posts
-          <Icon
-            name="streamline:curly-brackets-solid"
-            class="max-md:hidden md:h-12 md:w-12"
-          />
-        </div>
-        <div class="flex flex-wrap justify-center gap-8 lg:px-5 px-3 text-left">
-          <BlogPreview post={page.data[0]} />
-          <BlogPreview post={page.data[1]} />
-          <BlogPreview post={page.data[2]} />
-        </div>
-      </div>
-      <style>
-        main {
-          margin: auto;
-          width: 100%;
-        }
-      </style>
     </div>
   </div>
 </Layout>
