--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -113,7 +113,7 @@ try {
           Welcome to <span
             class="bg-clip-text text-transparent bg-gradient-to-r from-primary to-secondary"
           >
-            SpaceDinoDive</span
+            DinoSpaceDive</span
           >!
         </h1>
 
